# MMD

./: .gitignore  README.md
Cpp/: CMakeLists.txt
Cpp/src/: main.cpp  single.cpp
Cuda/: mmd.cu
Python/: mmd.py
src/: main.cpp
